[package]
name = "RISCVBox"
version = "1.3.6"
edition = "2021"
default-run = "RISCVBox"
rust-version = "1.77.2"
build = "build.rs"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "memoryapi", "wincon", "processenv", "handleapi", "winbase", "dwmapi"] }
microseh = "1.0.3"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2.155"
termios = "0.3.3"

[dependencies]
minifb = "0.27.0"
crossbeam = "0.8.4"
lazy_static = "1.5.0"
hashbrown = "0.14.5"
vm-fdt = "0.3.0"
clap = {version = "4.5.16", features = ["derive"]}

[[bin]]
name = "RISCVBox"
path = "src/main.rs"

[[bin]]
name = "test_riscv_isa"
path = "src/test_riscv_isa.rs"

[profile.release]
lto = true

[profile.dev]
overflow-checks = false
